objects/Data_Schedule__c.object
<CustomObject>
    <description>Object that uses the trigger to create and delete cron apex jobs for the recurring data generator</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Schedule that is active. Only one record can be active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Controls how many Occurrence records are processed in the batch at a time</description>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clean_Up_Batch_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Clean Up Batch Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <description>Day that the data generation should occur</description>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Frequency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debug_Email__c</fullName>
        <defaultValue>&quot;SF-DevAlerts@acvauctions.com&quot;</defaultValue>
        <description>Email that will receive debug, error, or log emails</description>
        <label>Debug Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF(Active__c,

&quot;The batch will generate data &quot; + 
IF(ISPICKVAL(Frequency__c,&quot;Daily&quot;),
    &quot;daily&quot;,
IF(ISPICKVAL(Frequency__c,&quot;Weekly&quot;),
    &quot;weekly on &quot; + TEXT(Day__c) + &quot;s&quot;,
IF(ISPICKVAL(Frequency__c,&quot;Monthly&quot;),
    &quot; on the &quot; + 
 CASE(Day__c, &quot;1&quot;, &quot;1st&quot;, &quot;2&quot;, &quot;2nd&quot;,&quot;3&quot;,&quot;3rd&quot;,TEXT(Day__c)+&quot;th&quot;) 

+ &quot; day of every month&quot;,
    
&quot;never&quot;))) + &quot; at midnight (check scheduled jobs for time of data generation). It will generate new data and any additional data for the next &quot; + TEXT(Horizon_Length__c) + &quot; &quot; +  LOWER(TEXT(Horizon_Type__c) + &quot;.&quot;)

,&quot;This schedule is not active and will not drive any data generation.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>How often does the data batch run</description>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generation_Batch_Size__c</fullName>
        <defaultValue>35</defaultValue>
        <label>Generation Batch Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horizon_Length__c</fullName>
        <description>How many x in the future to generate data</description>
        <label>Horizon Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horizon_Type__c</fullName>
        <description>Number of &quot;type&quot; in the future</description>
        <label>Horizon Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to invoke the batch to run</description>
        <inlineHelpText>Set to true and save to run the batch. Use sparingly!!!</inlineHelpText>
        <label>Run Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Clean_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this value true to run the clean up batch class. This value is paired with Run Generation</description>
        <inlineHelpText>Make value TRUE to run clean up batch. Also make &apos;Run Generation&apos; TRUE to run both concurrently.</inlineHelpText>
        <label>Run Clean Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this value TRUE to run the revolving appointment generation batch.</description>
        <inlineHelpText>Make this value TRUE and save to run the generation batch. Also make &apos;Run Clean Up&apos; TRUE to have them run concurrently</inlineHelpText>
        <label>Run Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_On_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Email will send when batch runs successfully when checked. Emails will always send when the batch fails.</inlineHelpText>
        <label>Send Email On Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_Active_on_Top</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All (Active first)</label>
    </listViews>
    <nameField>
        <displayFormat>Sch{000}</displayFormat>
        <label>Data Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>